accediendo al html por medio de javascript

--- a/Curso practico de javascript/index.html
+++ b/Curso practico de javascript/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Manupulación del DOM básico</h1>
+    <p>Esto es un párrafo</p>
+    <p class="parrafito">Esto es un párrafo con clase</p>
+    <p id="pid">Esto es un parrafo con id</p>
+    <input type="text" placeholder="Escribe algo aqui">
+    <script src="./script.js"></script>
 </body>
 </html>
