Listening to button btnCalcular

--- a/Curso practico de javascript/index.html
+++ b/Curso practico de javascript/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <h1>Manupulación del DOM básico</h1>
-    <input id="calculo1" placeholder="Escribe algo aqui">
-    <input onchange="console.log('Cambió el input')" id="calculo2" placeholder="Escribe algo aqui">
-    <button id="btnCalcular" onclick="btnOnClick()">Calcular</button>
-    <p id="result"></p>
+    <form id="form">
+        <input id="calculo1" placeholder="Escribe algo aqui">
+        <input id="calculo2" placeholder="Escribe algo aqui">
+        <button id="btnCalcular">Calcular</button>
+
+        <p id="result"></p>
+    </form>
     <script src="./script.js"></script>
 </body>
 </html>
