add event to form and execute botonSumar

--- a/Curso practico de javascript/index.html
+++ b/Curso practico de javascript/index.html
@@ -11,7 +11,7 @@
     <form id="form">
         <input id="calculo1" placeholder="Escribe algo aqui">
         <input id="calculo2" placeholder="Escribe algo aqui">
-        <button id="btnCalcular">Calcular</button>
+        <button id="btnCalcular" type="button">Calcular</button>
 
         <p id="result"></p>
     </form>
