--- a/Curso definitivo html y css/etiqueta video/index.html
+++ b/Curso definitivo html y css/etiqueta video/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <main>
+        <section>
+            <video controls preload="auto">
+                <source src="./media/video.mp4#t=10,19">
+                <source src="./media/video.m4v#t=10,19">
+            </video>
+        </section>
+    </main>
 </body>
 </html>
