Se agregan estilos a la lista del super

--- a/Curso definitivo html y css/supermarket.html
+++ b/Curso definitivo html y css/supermarket.html
@@ -5,33 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        p:first-child {
+            color: red;
+            font-size: 50px;
+            font-weight: 700;
+        }
+        main {
+            display: flex;
+            width: 100%;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
 </head>
 <body>
-    <p>desafio</p>
-    <h1>Soy la lista del super!</h1>
-    <ul>
-        <li>
-            Frutas
-            <ol>
-                <li>Manzana</li>
-                <li><a href="https://es.wikipedia.org/wiki/Banana" target="_blank">Platano</a></li>
-            </ol>
-        </li>
-        <li>
-            Carnes
-            <ol>
-                <li>Pollo</li>
-                <li>Carne molida</li>
-            </ol>
-        </li>
-        <li>
-            Verduras
-            <ol>
-                <li>Limón</li>
-                <li>Zanahoria</li>
-            </ol>
-        </li>
-    </ul>
-    <p>Creado con amor</p>
+    <main>
+        <p>Desafio</p>
+        <h1>Soy la lista del super!</h1>
+        <ul>
+            <li>
+                Frutas
+                <ol>
+                    <li>Manzana</li>
+                    <li><a href="https://es.wikipedia.org/wiki/Banana" target="_blank">Platano</a></li>
+                </ol>
+            </li>
+            <li>
+                Carnes
+                <ol>
+                    <li>Pollo</li>
+                    <li>Carne molida</li>
+                </ol>
+            </li>
+            <li>
+                Verduras
+                <ol>
+                    <li>Limón</li>
+                    <li>Zanahoria</li>
+                </ol>
+            </li>
+        </ul>
+        <p>Creado con amor</p>
+    </main>
 </body>
 </html>
