Combinador child y descendiente

--- a/Curso definitivo html y css/combinadores/index.html
+++ b/Curso definitivo html y css/combinadores/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div>
+    <!-- <div>
         <h2>soy un h2</h2>
         <p>soy un p</p>
         <h2>soy un h2</h2>
@@ -16,6 +16,21 @@
         <p>soy un p</p>
         <h2>soy un h2</h2>
         <p>soy un p</p>
+    </div> -->
+
+    <div>
+        <article>
+            <p>soy un texto</p>
+        </article>
+        <article>
+            <p>soy un texto</p>
+        </article>
+        <section>
+            <div>
+                <p>soy un texto</p>
+            </div>
+        </section>
+        <p>soy un texto</p>
     </div>
 </body>
 </html>
