--- a/Curso definitivo html y css/medidas/index.html
+++ b/Curso definitivo html y css/medidas/index.html
@@ -9,8 +9,17 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <main>
+    <main class="text-container">
         <p>Hola soy un texto de prueba</p>
+        <div>
+            <p>Soy otro texto</p>
+            <div>
+                <p>Soy otro texto</p>
+                <div>
+                    <p>Soy otro texto</p>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
