--- a/Curso definitivo html y css/medidas/index.html
+++ b/Curso definitivo html y css/medidas/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <main class="text-container">
+    <!-- em <main class="text-container">
         <p>Hola soy un texto de prueba</p>
         <div>
             <p>Soy otro texto</p>
@@ -17,6 +17,18 @@
                 <p>Soy otro texto</p>
                 <div>
                     <p>Soy otro texto</p>
+                </div>
+            </div>
+        </div>
+    </main> -->
+    <main>
+        <p>soy un texto ejemplo</p>
+        <div>
+            <p>soy otro texto</p>
+            <div>
+                <p>soy otro texto</p>
+                <div>
+                    <p>soy otro texto</p>
                 </div>
             </div>
         </div>
