Se agregan las imagenes del icono de la barra y la foto de perfil

--- a/google clon/index.html
+++ b/google clon/index.html
@@ -13,8 +13,10 @@
             <ul class="nav-right-section">
                 <li><a href="">Gmail</a></li>
                 <li><a href="">Imágenes</a></li>
-                <li><a href="">Icon</a></li>
-                <li><a href="">Photo</a></li>
+                <li class="menu-icon"><a href=""></a></li>
+                <li><a href="">
+                    <img src="https://lh3.googleusercontent.com/ogw/AAEL6sjBWbmn79AvyqPjKGHtU5ZOaYBqsglR2Pyc_fWe=s32-c-mo" alt="Imagen de perfil">
+                </a></li>
             </ul>
         </nav>
     </header>
