Estilos en los botones

--- a/google clon/index.html
+++ b/google clon/index.html
@@ -32,7 +32,7 @@
             </div>
         </section>
         <section class="main-buttons">
-            <div><button>Burcar con Google</button></div>
+            <div><button>Buscar con Google</button></div>
             <div><button>Me siento con suerte</button></div>
         </section>
     </main>
